Fixing alignment and font size of elements

--- a/bin/css/style.css
+++ b/bin/css/style.css
@@ -1,104 +1,8 @@
 html, body{
-	width: 100%;
-	height: 100%;
-	margin: 0px;
 	text-align: center;
-	color:#F7EBE5;
 }
 
-a{
-	color:inherit;
-	text-decoration: none;
-}
-
-ul{
-	  list-style-type: disc;
-}
-
-li{
-	display: inline;
-	margin: 5%;
-	padding-bottom: 2%;
-}
-
-nav{
-	text-transform: uppercase;
-	letter-spacing: 5px;
-	font-weight: bold;
-	font-size: 100%;
-}
-
-header:after{
-	background-color: #EB8558;
-	height:1%;
-}
-
-.title{
-	font-size:3.33em;
-	font-weight: 200;
-	/*letter-spacing: 5px;*/
-	border-style: solid;
-	border-color: #F7EBE5;
-	border-width: 1px;
-	text-align: center;
-	margin: 6%;
-}
-
-.subText{
-	font-size:100%;
-	font-weight: 100;
-	letter-spacing: 2px;
-}
-
-
-
-#content{
-	font-family: 'Roboto Slab', serif;
-}
-
-#heading{
-	min-height:100px;
-	background-color: #494649;
-	box-shadow: 0px 2px 15px #888888;
-}
-
-#intro{
-	text-align: center;
-
-}
-
-#logo{
-	height: 17%;
-	min-height: 150px;
-	text-align: center;
-	display: inline-block;
-}
-
-#titleText{
-	text-align: left;
-	display: inline-block;
-	margin-left: 2%;
-}
-
-#colorbar{
-	background:linear-gradient(to right, #EB8558 0%, #EB8558 50%, #7FAD9A 80%);;
-	height:1%;
-}
-
-
-
-@media only screen and (max-device-width: 480px) {
-	nav{
-		text-transform: uppercase;
-		letter-spacing: 5px;
-		font-weight: bold;
-		font-size: 150%;
-	}
-
-	#logo{
-		height: 12%;
-		min-height: 150px;
-		text-align: center;
-		display: inline-block;
-	}
+.brand-item {
+	padding: 10%;
+	margin-left: 20px;
 }
